--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ jobs:
         name: Meterian client scan
         runs-on: ubuntu-latest
         steps: 
+          - name: Checkout
+            uses: actions/checkout@v3
           - name: Meterian scan
             uses: MeterianHQ/meterian-github-action@v1.0.10
             env:
@@ -14,4 +16,4 @@ jobs:
                 DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
                 DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
             with:
-                cli_args: --flags:maven.extra.parameters="-s settings.xml" --debug
+                cli_args: --flags:"maven.extra.parameters=-s settings.xml" --debug
