--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,6 @@ jobs:
                 METERIAN_API_TOKEN: ${{ secrets.METERIAN_API_TOKEN }}
                 DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
                 DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+                CLIENT_VM_PARAMS: "-Dmaven.extra.parameters='-s settings.xml'"
             with:
-                cli_args: "--flags:maven.extra.parameters='-s settings.xml' --debug"
+                cli_args: --debug
